# trustgate

./: .gitignore  AUDIT.md  INTEGRATIONS.md  INTEROP.md  README.md  action.yml  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml  trustgate-action.yml
demos/01-basic/: SCENARIO.md  run_demo.py
demos/01-basic/sample-project/: README.md
demos/01-basic/sample-project/.cursor/: mcp.json
demos/01-basic/sample-project/.devcontainer/: devcontainer.json
examples/: help.txt  rules.txt  version.txt
tests/: test_connect.py  test_deep.py  test_deep_v2.py  test_hardening.py  test_smoke.py
trustgate/: __init__.py  ai_backend.py  cli.py  connect.py  core.py  mcp_server.py
